--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "leaflet": "^1.2.0",
     "leaflet-omnivore": "^0.3.4",
     "mapbox": "^1.0.0-beta9",
+    "mapbox-gl": "^0.41.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
